Updated vignettes for version 0.2.0.9000

--- a/vignettes/a-grading-with-gradetools.Rmd
+++ b/vignettes/a-grading-with-gradetools.Rmd
@@ -174,7 +174,7 @@ Once the new rubric item has been added, the grader will be able to apply it to 
 
 Continue grading this student. For the general feedback, we will provide a personalized single-use general feedback. To do so enter "p" for the general feedback rubric item, and a box will pop up for user input.
 
-<iframe src="https://drive.google.com/file/d/1mLd1ky4QgbG_QlU_4yqncfYE35QI5PgK/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1SQaR18ZTITZC4gwfTvdpGsm6CtuQHSKz/preview" width="640" height="480" allow="autoplay"></iframe>
 
 Write the message "We want to use figures to clearly convey information. Plotting with the default axes or producing unused plots is not good practice.".
 
@@ -191,7 +191,13 @@ Question 3 is another example of this. Note the rubric items do not need to be e
 
 <iframe src="https://drive.google.com/file/d/1Uj2ew3fttg5NpNN8rCDfeTdT3v3XDmiZ/preview" width="640" height="480" allow="autoplay"></iframe>
 
-Question 3.a was left blank so we take away all points for this question by entering the all questions prompt code "404".
+Sometimes a grader may want to leave a comment for a student about a specific question. In this case the prompt code "c" would be used. Question 3.a was left blank, so maybe we want to leave a comment reminding students to double check their work. Enter "c" for this question and provide the reminder in the text box. 
+
+<iframe src="https://drive.google.com/file/d/1dDIQvMLvwb-uKfN4ynr7fxvX-CfKssp1/preview" width="640" height="480" allow="autoplay"></iframe>
+
+We also want to take away all points for this question by entering the all questions prompt code "404".
+
+Note both adding a new rubric item and leaving a comment need to be done before grading the question.
 
 Question 3.b is missing the slope value and the interpretation is not in context. Both of these are mistakes other students might make so we will create two additional rubric items and then assign them to Mine.
 
@@ -207,7 +213,7 @@ Now you can finish grading Mine's assignment.
 
 Once all students have been graded a message will appear telling the grader about the final grade sheet.
 
-<iframe src="https://drive.google.com/file/d/1YyTwMQwExVgZbGCAEiyWbmy4O7kYyq-s/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1jIDCYmv6g_OuHKgeEQk-rMCMlJcawlt2/preview" width="640" height="480" allow="autoplay"></iframe>
 
 The final grade sheet will contain all of the columns present in the roster, plus two additional columns. One of these columns will be the final grade for each student and one will be the grade decomposition, the number of points a student earned for each question. 
 
