--- a/vignettes/d-extended-capability-github.Rmd
+++ b/vignettes/d-extended-capability-github.Rmd
@@ -53,54 +53,31 @@ ghclass::local_repo_clone(
 
 A message will be shown to confirm which repos have been cloned (bottom-left screenshot) and the cloned repos will appear in the path specified (bottom-right screenshot).
 
-<iframe src="https://drive.google.com/file/d/17Zrtmm52XY744G3qcU7jl7ovSg0YINl_/preview" width="640" height="480" allow="autoplay"></iframe>
+<!-- v4-cloned-repos-messages.png -->
+<iframe src="https://drive.google.com/file/d/16HxGW59t2j0ooqhEyMOFdPZb9xDesUJZ/preview" width="640" height="480" allow="autoplay"></iframe>
 
 <br>
 
-<iframe src="https://drive.google.com/file/d/1TwoCliVoY2dYSS0BX1ifP24pH00soIl1/preview" width="640" height="480" allow="autoplay"></iframe>
-
-
-
-## Pushing feedback files to GitHub with push_to_github()
-
-After grading with `assist_grading()` or `assist_advanced_grading()` - and after re-grading with `assist_regrading()` - the function `push_to_github()` can be called to push all feedback files that have been written while grading and that have not been pushed yet to GitHub.
-
-Here is what a call to `push_to_github()` could look like:
-
-```{r}
-push_to_github (
-  temp_grade_sheet_path =  "quiz-09-lin-reg-temporary-grade-sheet.csv",
-  class_github_name = "gradetools-test-course",
-  example_github_repo = "week09-regression-federicazoe",
-  example_identifier = "federicazoe",
-  push_feedback = TRUE
-)
-```
-
-Here is a description of the specified inputs:
-- `temp_grade_sheet_path` needs to be the same path specified when grading where the temporary grade sheet for this assignment has been stored. This is needed so that all students identifiers can be retrieved (note that they need to equal their GitHub usernames) and to keep track of which feedback files are pushed;
-- `class_github_name` is the name of the GitHub organization corresponding to this class;
-- `example_github_repo` is an example of a name of a student (or a team's) repo for this assignment;
-- `example_identifier`
-- `push_feedback = TRUE` asks the function to push the feedback files (the same function could be used to only create issues, see below).
-
-Running this function will push each feedback file to the respective repo, if the repo is found:
-
-<iframe src="https://drive.google.com/file/d/1LsVfXT4ttKE4kv3MGuDadKWIJZ-SEX8E/preview" width="640" height="480" allow="autoplay"></iframe>
+<!-- v4-cloned-repos-folders.png -->
+<iframe src="https://drive.google.com/file/d/1qVKZfbkwD_5ONYVocxLpnUE9XIN6uNlu/preview" width="640" height="480" allow="autoplay"></iframe>
 
 
 ## Creating GitHub issues  
 
-While we are grading, gradetools can give us the option to take note of some GitHub issues that we would like to create into students' or teams' repos. To be given this option, we need to grade using `assist_advanced_grading()` with the input `github_issues` set to TRUE. 
+While we are grading, gradetools can give us the option to take note of some GitHub issues that we would like to create in students' or teams' GitHub repos. To be given this option, we need to grade using `assist_advanced_grading()` with the input `github_issues` set to TRUE. 
 
 ### Take note of desired GitHub issues with assist_advanced_grading()
 
-For the function call below we assume the working directory is a directory with 4 cloned repos from GitHub:
+Noting and pushing issues are separated across two functions. While grading a user can make note of issues and gradetools stores this information to be easily pushed later using `push_to_github()`. First we will take note of an issue while grading.
+
+The function call below assumes the working directory is a directory with 4 cloned repositories from the gradetools -test-course organization on GitHub:
 
     - quizzes-collected-week09-regression
     - week09-regression-federicazoe
     - week09-regression-CatalinaMedina
     - week09-regression-mdogucu
+
+Both `assist_advanced_grading()` and `assist_team_grading()` allow for the creation of GitHub issues. These functions have similar arguments except the second uses team identifiers instead of just student identifiers. Here we will work with `assist_advanced_grading()` and the same assignments from the "how-to-grade-with-gradetools" vignette. Run the following code to begin.
 
 ```{r}
 assist_advanced_grading(
@@ -115,34 +92,31 @@ assist_advanced_grading(
 )
 ```
 
-By default, for each student (or team) gradetools will ask us only once if we want to take note of some issues - when we are done grading that student (or team):
+Note the new prompt code "i" for taking note of a GitHub issue while grading.
 
-After grading all assignment parts  and optionally specifying a general feedback for a student, we are then asked if we would like to take note of an issue and we type "000" if we want to:
+<!-- v4-begin-grading-with-issues.png -->
+<iframe src="https://drive.google.com/file/d/1lANLmQ4xOhQfvbr4h_XBAYhxAiecb9KI/preview" width="640" height="480" allow="autoplay"></iframe>
 
-<iframe src="https://drive.google.com/file/d/1Q__ErERJTDeuUbpUBlUVgWc5tM2owc2a/preview" width="640" height="480" allow="autoplay"></iframe>
+Grading is not the objective of this vignette, so assign whichever rubric items you would like and stop before grading Mine's question 3a.
 
-We will then be prompted to specify a title and a body for the issue:
+Recall in the "Grading with gradetools" vignette when we wrote a message in Mine's feedback for the question she forgot to answer. Our message told Mine she could do the question for partial credit. If the assignment was submitted through GitHub creating an issue may be a more immediate way to convey this information.
 
-<iframe src="https://drive.google.com/file/d/1F-HHXdOU-Quan1Is-LAd6CFs9fRSVajI/preview" width="640" height="480" allow="autoplay"></iframe>
+Use prompt code "i" to note an issue with the title "Answer question for partial credit", and the body "This question was unanswered. You may complete this question and resubmit your assignment for partial credit." 
 
-<br>
+<!-- v4-issue-title.png -->
+<iframe src="https://drive.google.com/file/d/1NHZBjcmKZSXXJJsvoLMYfU-yLmdc7SXi/preview" width="640" height="480" allow="autoplay"></iframe>
 
-<iframe src="https://drive.google.com/file/d/1JABjaCbTYqJSGA2EXxtIEOsCOQu3bsCS/preview" width="640" height="480" allow="autoplay"></iframe>
+<!-- v4-issue-body.png -->
+<iframe src="https://drive.google.com/file/d/11cGo9_hdYUyp6PE3rZxtoRWzNOOzhVvN/preview" width="640" height="480" allow="autoplay"></iframe>
 
-We can cancel taking note of an issue at any time, and we can take note of as many issues as we want:
-
-<iframe src="https://drive.google.com/file/d/1JABjaCbTYqJSGA2EXxtIEOsCOQu3bsCS/preview" width="640" height="480" allow="autoplay"></iframe>
-
-Finally, by setting the optional parameter `issue_every_question` to TRUE, we would be asked whether we want to take note of a new issue at the end of _each part_ of each student's (or team's) assignment. This would be recommended only for assignments with few parts:
-
-<iframe src="https://drive.google.com/file/d/1Act6Ej8q2SLhiLIdDOjf4QHJNm_ypP6U/preview" width="640" height="480" allow="autoplay"></iframe>
+Once the issue details have been noted we can use "s" to stop grading at any point to proceed to push the issue to GitHub.
 
 
-### Create desired GitHub issues with push_to_github()
+## Pushing feedback files and issues to GitHub with push_to_github()
 
-After grading with `githb_issues = TRUE` using `assist_grading()` or `assist_advanced_grading()` - and after re-grading with `assist_regrading()` - the function `push_to_github()` can be called to push all feedback files that have been written while grading and that have not been pushed yet to GitHub.
+After creation of feedback files and or noting of GitHub issue details, the `push_to_github()` function allows us to push what we want to GitHub.
 
-Here is what a call to `push_to_github()` could look like:
+Here is what a call to `push_to_github()` could look like to push feedback files:
 
 ```{r}
 push_to_github (
@@ -150,21 +124,23 @@ push_to_github (
   class_github_name = "gradetools-test-course",
   example_github_repo = "week09-regression-federicazoe",
   example_identifier = "federicazoe",
-  push_issues = TRUE
+  push_feedback = TRUE
 )
 ```
 
-Running the above code will look into the temporary grade sheet and push all GitHub issues that the grader has taken note of and have not been pushed yet:
+Here is a description of the specified inputs that are new to us:
+- `class_github_name` is the name of the GitHub organization corresponding to this class;
+- `example_github_repo` is an example of a name of a student's (or a team's) repository for this assignment;
+- `example_identifier` is a student_identifier (or team_identifier) from the class roster. For compatibility with GitHub this must be 
+- `push_feedback = TRUE` asks the function to push the feedback files (the same function could be used to only create issues, see below).
 
-<iframe src="https://drive.google.com/file/d/12OByuPY7WDtKOCl-Fzg_BD3pFO2107mn/preview" width="640" height="480" allow="autoplay"></iframe>
+To push issues the additional argument would be setting `push_issues` to TRUE. The two push arguments do not need to be run together or on different function calls.
 
-If we look on GitHub, we will see that the desired issues have been created and assigned to the correct students:
+Running this function will push each feedback file to the respective repo, if the repo is found:
 
-<iframe src="https://drive.google.com/file/d/1hOiMucoP_oCT-zniMxlWz6ZvSWn717jX/preview" width="640" height="480" allow="autoplay"></iframe>
+<!-- v4-pushed-feedback.png -->
+<iframe src="https://drive.google.com/file/d/1EQAYrvrCVBjGnFYAV8X9NsuvVAdXTfKh/preview" width="640" height="480" allow="autoplay"></iframe>
 
-<br>
-
-<iframe src="https://drive.google.com/file/d/1JESDQyFz12F7fh-_dWZnsOsEcYqbqGEE/preview" width="640" height="480" allow="autoplay"></iframe>
 
 ## Credits
 
